2007-03-26 [colin]	2.8.1cvs56

	* src/compose.c
		More popup-menu (in attachments list)

2007-03-26 [colin]	2.8.1cvs55

	* src/compose.c
		Enable popup-menu signal

2007-03-26 [colin]	2.8.1cvs54

	* src/plugins/pgpinline/pgpinline.c
		Fix bug 1111, 'PGP/inline plugin hides text 
		around encrypted text block'. Patch based on
		a patch from Michal Cihar.

2007-03-26 [wwp]	2.8.1cvs53

	* src/procmsg.c
		Fix getting a false error when sending queued message
		whereas the sending was fine (if there are subfolders
		in the queue folder), thanks to Colin.

2007-03-26 [paul]	2.8.1cvs52

	* src/wizard.c
		update FACE header in welcome message

2007-03-25 [colin]	2.8.1cvs51

	* src/Makefile.am
		Fix make dist

2007-03-25 [colin]	2.8.1cvs50

	* src/main.c
		Fix OSSO_NAME on Maemo (patch by Jean-Luc)

2007-03-24 [colin]	2.8.1cvs49

	* src/main.c
		Fix a few launch problems on Maemo
		Patch by Jean-Luc Biord

2007-03-24 [wwp]	2.8.1cvs48

	* src/alertpanel.c
	* src/alertpanel.h
	* src/messageview.c
	* src/summaryview.c
		Fix wrong action performed when closing the
		"ask about account specific filtering rules
		when filtering manually" dialog by pressing Escape.
		Fix wrong order of buttons in the "return receipt
		notification - the message was sent to several of
		your accounts" dialog.

2007-03-24 [paul]	2.8.1cvs47

	* src/folderview.c
		an improvement to English usage
	* tools/kdeservicemenu/README
		updated Claws url

2007-03-24 [paul]	2.8.1cvs46

	* src/Makefile.am
	* src/stock_pixmap.c
	* src/pixmaps/edit_extern.xpm
	* src/pixmaps/mail_sign.xpm
		rescue long lost icons

2007-03-24 [paul]	2.8.1cvs45

	* src/toolbar.c
		fix toolbar (broken in 2.8.1cvs42)

2007-03-23 [colin]	2.8.1cvs44

	* src/imap.c
		Correctly unsubscribe/resubscribe after
		RENAME

2007-03-23 [colin]	2.8.1cvs43

	* src/prefs_common.c
		Maemo: as the platform is light on RAM, allow
		caches to be discarded faster.

2007-03-23 [colin]	2.8.1cvs42

	* src/Makefile.am
	* src/compose.c
	* src/compose.h